WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258483
Bogus lang= attributes can cause null pointer derefs (line breaker object fails to be created)
https://bugs.webkit.org/show_bug.cgi?id=258483
Summary
Bogus lang= attributes can cause null pointer derefs (line breaker object fai...
Myles C. Maxfield
Reported
2023-06-23 15:04:45 PDT
Bogus lang= attributes can cause null pointer derefs (line breaker object fails to be created)
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2023-06-23 15:04:56 PDT
<
rdar://problem/110440971
>
Myles C. Maxfield
Comment 2
2023-06-23 15:11:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15267
EWS
Comment 3
2023-06-23 18:27:14 PDT
Committed
265495@main
(3f00535f9158): <
https://commits.webkit.org/265495@main
> Reviewed commits have been landed. Closing PR #15267 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug